# learn-rust-bindgen

example-app/: Makefile  add.cpp  add.hpp  main.cpp
example-rust/: Cargo.toml  Makefile  build.rs
example-rust/src/: main.rs
