[package]
name = "example-rust"
version = "0.1.0"
authors = ["andrew webber (personal) <andrewvwebber@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = {features = ["runtime"], version = "0.55.1" }
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
libc = "0.2.80"
